[package]
name = "rustmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
env_logger = "0.11.0"
log = "0.4.20"
lsp-server = "0.7.6"
lsp-types = "0.95.0"
nom = "7.1.3"
nom-tracable = "0.9.1"
nom_locate = "4.2.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
